doc/src/default.css
* {
  padding: 0;
  margin: 0;
}
html {
  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
  text-align: justify;
  font-size: 1em;
  background: #F3F6ED;
  padding: 4em;
}
h1 {
  text-align: center;
  margin-bottom: 1em;
}
h2 {
  margin-top: 1.5em;
  font-size: 1.25em;
}
h3 {
  font-size: 1em;
  margin-top: 1.5em;
}
h4 {
  font-size: 0.9em;
  margin-top: 1em;
  margin-bottom: 0;
}
p {
  margin: 0.75em 0;
}
div#contents {
  position: relative;
  border: 1px solid #666;
  background: #FFF;
}
div#body {
  padding: 4em 1em 1px 1em;
}
div#footer {
  margin: 0.5em;
  margin-bottom: 0;
  padding: 0 0.5em;
  border-top: 1px solid #CCC;
  background: #FFF;
  font-size: 80%;
}
pre {
  background-color: #F8F8F8;
  border: 1px dashed #CCC;
  margin: 1em;
  overflow: auto;
  padding: 0.5em;
  font-size: 1.1em;
}
blockquote {
  margin: 15px 30px 0 45px;
  font-style:italic;
}
ul, ol { 
  margin: 1em 1em 1em 2em;
}
code {
  font-size: 120%;
}
div.header {
  width: 100%;
  position: absolute;
  top: 0;
}

/*menu*/
div.menu {
  line-height: 2em;
  color: #FFF;
}
div.menu ul {
  display: block;
  background: #333;
}
div.menu ul li {
  padding: 0.2em 1em;
  display: block;
  font-size: 1.2em;
}
.menu a {
  color: #CCC;
  display: block;
  text-decoration: none;
}
.menu a:hover {
  color: #EEE;
}
.menu .selected {
  color: #FFF;
}

/*submenu*/
div.submenu {
  line-height: 1.4em;
}
div.submenu ul {
  display: block;
  background: #BDCD9D;
  border: 1px solid #333;
  border-width: 1px 0;
}
div.submenu ul li {
  padding: 0.2em 1em;
  display: block;
  font-size: 1em;
}
.submenu a {
  color: #000;
  display: block;
  text-decoration: none;
}
.submenu a:hover {
  text-decoration: underline;
}
.submenu .selected {
  text-decoration: underline;
}

/*Utils*/
.horizontal ul, .horizontal2 {
  list-style: none;
  margin: 0;
  padding: 0;
}
.horizontal li, .horizontal2 li {
  float: left;
  padding: 0 0.5em;
  border-right: 1px solid #666;
}
.horizontal2 li {
  border-width: 0;
}
.horizontal .last, .horizontal .right, .horizontal2 .last, .horizontal2 .right {
  padding-right: 0;
  border-right: 0;
}
.horizontal .right, .horizontal2 .right { 
  float: right;
}
.horizontal ul:after, .horizontal2:after {
  content: "."; 
  display: block; 
  height: 0; 
  clear: both; 
  visibility: hidden;
}
.horizontal ul, .horizontal2 { display: inline; }
* html .horizontal ul, .horizontal2 { height: 1%; }
.horizontal ul, .horizontal2 { display: block; }

